fix course list spacing

--- a/assets/scss/components/_badge.scss
+++ b/assets/scss/components/_badge.scss
@@ -1,6 +1,6 @@
 // Badge
 .masteriyo-badge {
-	font-size: 11px;
+	font-size: 10px;
 	font-weight: 500;
 	letter-spacing: 0.5px;
 	text-transform: uppercase;
