--- a/assets/scss/responsive/_small.scss
+++ b/assets/scss/responsive/_small.scss
@@ -158,4 +158,8 @@
 			width: 100%;
 		}
 	}
+
+	.masteriyo-dashboard {
+		margin-top: $spacing_40px;
+	}
 }
